Bug 256967 - Several open composer instances on kmail mobile startup
Summary: Several open composer instances on kmail mobile startup
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: HI minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-15 12:06 UTC by Bjoern Ricks
Modified: 2010-12-02 12:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bjoern Ricks 2010-11-15 12:06:39 UTC
Version 4:4.6~20101115.1197240-1maemo1.1196115

After startup of kmail-mobile several instances (currently four) of the mail composer are opened automatically. Kmail-mobile was closed without an open composer before and also there is no draft or template in the local folders.

Reproducible: Always
Comment 1 Volker Krause 2010-11-22 16:53:49 UTC
SVN commit 1199750 by vkrause:

Remove empty autosave files as well.

BUG: 256967


 M  +3 -0      composerview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1199750
Comment 2 Ludwig Reiter 2010-12-02 12:19:39 UTC
version: 20101202-1202744

Problem cannot be reproducted with this version anymore.