Remove empty autosave files as well.

BUG: 256967

svn path=/trunk/KDE/kdepim/mobile/; revision=1199750